--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>More than meets the eye</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Autobots, roll out!</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -39,7 +39,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#api-demo">API Demo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact us</a>
@@ -74,10 +74,14 @@
       </div>
     </section>
 
-    <!-- Projects Section -->
-    <section id="projects" class="projects-section bg-light">
+    <!-- API Demo Section -->
+    <section id="api-demo" class="projects-section bg-light">
         <div class="container">
             <div class="row">
+                <h2 class="my-2 col-sm-12 larger text-center">API Demo</h2>
+            </div>
+            <div class="row">
+                <div class="my-2 col-sm-4"></div>
                 <button onclick="getDataFromApi()" class="my-2 col-sm-4">GET from API</button>
                 <div id="api_status" class="my-2 col-sm-4"></div>
             </div>
@@ -140,11 +144,6 @@
         </div>
 
       </div>
-    </section>
-
-
-    <!-- API data Section -->
-    <section>
     </section>
 
     <!-- Footer -->
