--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,9 @@
     <!-- Custom styles for this template -->
     <link href="../static/css/grayscale.min.css" rel="stylesheet">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
   </head>
 
   <body id="page-top">
